@@ -35,13 +35,14 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.net.Proxy;
 import java.net.URI;
-import java.net.URL;
 import java.nio.charset.Charset;
 import java.util.*;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 
 @Slf4j
 public class M3u8MediaProxyTask extends MediaProxyTask {
@@ -51,14 +52,14 @@ public class M3u8MediaProxyTask extends MediaProxyTask {
     private              BlockingQueue<String> downloadQueue        = new LinkedBlockingQueue<>();
     private              AtomicInteger         retry                = new AtomicInteger(0);
     private              int                   lastSeqIndex         = 0;
-    private              MediaProxyTask        downloadTask;
+    private final        MediaProxyTask        downloadTask;
 
     public M3u8MediaProxyTask(String videoId, URI sourceUrl, Proxy proxy) {
         super(videoId, sourceUrl, proxy);
         downloadTask = new MediaProxyTask(getVideoId() + "_DOWNLOAD", null, getProxy()) {
             @Override
             protected void runTask() throws InterruptedException {
-                while (!getTerminated()) {
+                while (retry.get() < MAX_RETRY_COUNT) {
                     String queueData = downloadQueue.poll(1000, TimeUnit.MILLISECONDS);
                     if (queueData != null) {
                         for (int i = 0; i < 3; i++) {
@@ -68,10 +69,10 @@ public class M3u8MediaProxyTask extends MediaProxyTask {
                                 File seqFile = new File(queueDatas[1]);
                                 if (!seqFile.exists()) {
                                     if (mediaVideoInfo.getEncodeMethod() == null) {
-                                        HttpRequestUtil.downloadToFile(new URL(queueDatas[0]), seqFile, getProxy());
+                                        HttpRequestUtil.downloadToFile(new URI(queueDatas[0]), seqFile, getProxy());
                                     } else {
                                         seqFile.getParentFile().mkdirs();
-                                        byte[] encodedData = HttpRequestUtil.downloadUrl(new URL(queueDatas[0]), getProxy());
+                                        byte[] encodedData = HttpRequestUtil.downloadUrl(new URI(queueDatas[0]), getProxy());
                                         try (FileOutputStream seqFileStream = new FileOutputStream(seqFile)) {
                                             try {
                                                 SecretKeySpec sKeySpec = new SecretKeySpec(mediaVideoInfo.getEncodeKey(), "AES");
@@ -80,7 +81,7 @@ public class M3u8MediaProxyTask extends MediaProxyTask {
                                                 cipher.init(Cipher.DECRYPT_MODE, sKeySpec, ivParameterSpec);
                                                 byte[] decodedData = cipher.doFinal(encodedData);
                                                 IOUtils.write(decodedData, seqFileStream);
-                                            } catch (Exception e) {
+                                            } catch (Throwable e) {
                                                 log.warn("媒体数据解密失败{} KEY={},IV={},SEQ={}", e.getMessage(), Hex.encodeHexString(mediaVideoInfo.getEncodeKey()), Hex.encodeHexString(mediaVideoInfo.getEncodeIV()), seqFile);
                                                 IOUtils.write(encodedData, seqFileStream);
                                             }
@@ -90,13 +91,15 @@ public class M3u8MediaProxyTask extends MediaProxyTask {
                                     retry.set(0);
                                 }
                                 break;
-                            } catch (Exception e) {
+                            } catch (Throwable e) {
                                 log.error(getVideoId() + "出错重试(" + retry.incrementAndGet() + "/" + MAX_RETRY_COUNT + ")次", e);
                                 if (e instanceof FileNotFoundException) {
                                     break;
                                 }
                             }
                         }
+                    } else if (M3u8MediaProxyTask.this.getTerminated()) {
+                        return;
                     }
                 }
             }
@@ -110,18 +113,20 @@ public class M3u8MediaProxyTask extends MediaProxyTask {
 
     @Override
     public void terminateTask() {
-        downloadTask.terminate();
+        downloadTask.waitForTerminate();
         createConcatListFile();
     }
 
     @Override
     public void runTask() throws InterruptedException {
         MediaProxyManager.runProxy(downloadTask);
+        File m3u8File = new File(MediaProxyManager.getTempPath() + "/m3u8/" + getVideoId() + "/index.m3u8");
+        m3u8File.delete();
         while (retry.get() < MAX_RETRY_COUNT && !getTerminated()) {
             long start = System.currentTimeMillis();
             try {
                 log.debug("get m3u8 meta info from " + getSourceUrl());
-                String[] m3u8Lines = HttpRequestUtil.downloadUrl(getSourceUrl().toURL(), Charset.defaultCharset(), getProxy()).split("\n");
+                String[] m3u8Lines = HttpRequestUtil.downloadUrl(getSourceUrl(), Charset.defaultCharset(), getProxy()).split("\n");
                 int seqCount = 0;
                 int readSeqCount = 0;
                 int startSeq = 0;
@@ -147,7 +152,7 @@ public class M3u8MediaProxyTask extends MediaProxyTask {
                 if (readSeqCount == 0) {
                     log.info(getVideoId() + "没有找到可以下载的片段，重试(" + retry.incrementAndGet() + "/" + MAX_RETRY_COUNT + ")次");
                 }
-            } catch (Exception e) {
+            } catch (Throwable e) {
                 log.error(getVideoId() + "出错重试(" + retry.incrementAndGet() + "/" + MAX_RETRY_COUNT + ")次", e);
             }
             Thread.sleep(Math.max(2000 - (System.currentTimeMillis() - start), 0));
@@ -223,7 +228,7 @@ public class M3u8MediaProxyTask extends MediaProxyTask {
                 FileUtils.write(new File(m3u8Path + "/concat.sh"), cmdLine);
                 FileUtils.write(new File(m3u8Path + "/play.cmd"), "ffplay -f concat -i list.txt");
             }
-        } catch (Exception e) {
+        } catch (Throwable e) {
             log.error("创建TS文件列表失败", e);
         }
     }
